--- a/src/components/products/products.component.html
+++ b/src/components/products/products.component.html
@@ -1,34 +1,15 @@
 <div class="container mt-4">
-    <h2 class="text-center mb-4">Product List</h2>
-    <table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Product</th>
-          <th scope="col">Photo</th>
-          <th scope="col">Price</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">Add to Cart</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of products; let index = index;">
-          <th scope="row">{{ index + 1 }}</th>
-          <td>{{ product.name }}</td>
-          <td>
-            <img [src]="product.photo" alt="{{ product.name }}" class="img-fluid" style="width: 100px; height: auto;" />
-          </td>
-          <td>{{ product.price | currency }}</td>
-          <td>
-            <input type="number" class="form-control" [(ngModel)]="quantities[index]" min="1" value="1" />
-          </td>
-          <td>
-            <button class="btn btn-success" (click)="addToCart(product, quantities[index])">
-              <i class="fas fa-cart-plus"></i> Add
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  
+  <h2 class="text-center mb-4">Product List</h2>
+  <table datatable [dtOptions]="dtoptions" class="table table-striped table-hover">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Product</th>
+        <th scope="col">Photo</th>
+        <th scope="col">Price</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Add to Cart</th>
+      </tr>
+    </thead>
+  </table>
+</div>
