--- a/src/components/product-list/product-list.component.html
+++ b/src/components/product-list/product-list.component.html
@@ -1,32 +1,44 @@
 <div class="container mt-4">
-    <h2 class="text-center mb-4">Product List</h2>
-    <input type="text" placeholder="Search..." (input)="onSearch($event)" />
-  
-    <table class="table table-striped table-hover">
-      <thead class="thead-dark">
-        <tr>
-          <th (click)="onSort('id', paginationFilter.sortDirection === 'asc' ? 'desc' : 'asc')">#</th>
-          <th (click)="onSort('name', paginationFilter.sortDirection === 'asc' ? 'desc' : 'asc')">Product</th>
-          <th>Photo</th>
-          <th (click)="onSort('price', paginationFilter.sortDirection === 'asc' ? 'desc' : 'asc')">Price</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of products">
-          <td>{{ product?.id }}</td>
-          <td>{{ product?.name }}</td>
-          <td><img [src]="product?.photo" alt="Product Image" style="width: 100px; height: auto;" /></td>
-          <td>{{ product?.price }} $</td>
-        </tr>
-      </tbody>
-    </table>
-  
-    <nav>
-      <ul class="pagination">
-        <li *ngFor="let page of [1, 2, 3, 4]" (click)="onPageChange(page)">
+  <h2 class="text-center mb-4">Product List</h2>
+  <input type="text" placeholder="Search..." (input)="onSearch($event)" />
+
+  <table class="table table-striped table-hover">
+    <thead class="thead-dark">
+      <tr>
+        <th (click)="onSort('id', paginationFilter.sortDirection === 'asc' ? 'desc' : 'asc')">#</th>
+        <th (click)="onSort('name', paginationFilter.sortDirection === 'asc' ? 'desc' : 'asc')">Product</th>
+        <th>Photo</th>
+        <th (click)="onSort('price', paginationFilter.sortDirection === 'asc' ? 'desc' : 'asc')">Price</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Process</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (product of products; track product.id)
+      {
+      <tr>
+        <td>{{ product?.id }}</td>
+        <td>{{ product?.name }}</td>
+        <td><img [src]="product?.photo" alt="Product Image" style="width: 100px; height: auto;" /></td>
+        <td>{{ product?.price }} $</td>
+        <td><input type="number" class="form-control" [(ngModel)]="product.Quantity" min="0" /></td>
+        <td><button class="btn btn-success add-to-cart" [disabled]="product.Quantity==0 ||!product.Quantity" (click)="CreateOrder(product.id)">
+          <i class="fas fa-cart-plus"></i> Buy
+        </button></td>
+      </tr>
+      }
+    </tbody>
+  </table>
+
+  <nav>
+    <ul class="pagination">
+      @for (page of pages; track $index)
+      {
+        <li (click)="onPageChange(page)">
           <a class="page-link">{{ page }}</a>
         </li>
-      </ul>
-    </nav>
-  </div>
-  
+      }
+      
+    </ul>
+  </nav>
+</div>
