--- a/src/components/product-list/product-list.component.html
+++ b/src/components/product-list/product-list.component.html
@@ -17,9 +17,9 @@
       @for (product of products; track product.id)
       {
       <tr>
-        <td>{{ product?.id }}</td>
-        <td>{{ product?.name }}</td>
-        <td><img [src]="product?.photo" alt="Product Image" style="width: 100px; height: auto;" /></td>
+        <td>{{ product.id }}</td>
+        <td>{{ product.name }}</td>
+        <td><img [src]="product.photo" alt="Product Image" style="width: 100px; height: auto;" /></td>
         <td>{{ product?.price }} $</td>
         <td><input type="number" class="form-control" [(ngModel)]="product.Quantity" min="0" /></td>
         <td><button class="btn btn-success add-to-cart" [disabled]="product.Quantity==0 ||!product.Quantity" (click)="CreateOrder(product.id)">
