--- a/src/components/product-list/product-list.component.html
+++ b/src/components/product-list/product-list.component.html
@@ -22,7 +22,7 @@
         <td><img [src]="product.photo" alt="Product Image" style="width: 100px; height: auto;" /></td>
         <td>{{ product?.price }} $</td>
         <td><input type="number" class="form-control" [(ngModel)]="product.Quantity" min="0" /></td>
-        <td><button class="btn btn-success add-to-cart" [disabled]="product.Quantity==0 ||!product.Quantity" (click)="CreateOrder(product.id)">
+        <td><button class="btn btn-success add-to-cart" [disabled]="product.Quantity==0 ||!product.Quantity" (click)="CreateOrder(product.id,product.Quantity)">
           <i class="fas fa-cart-plus"></i> Buy
         </button></td>
       </tr>
