--- a/src/components/order/order.component.html
+++ b/src/components/order/order.component.html
@@ -5,7 +5,10 @@
       <h3>Order Details</h3>
       <ul class="list-group">
         <li *ngFor="let item of order?.orderItems" class="list-group-item d-flex justify-content-between align-items-center">
-          <span>{{ item.name }} (x{{ item.quantity }})</span>
+          <div>
+            <span>{{ item.name }} (x{{ item.quantity }})</span><br>
+            <small class="text-muted">Unit Price: {{ item.unitPrice | currency }}</small>
+          </div>
         </li>
       </ul>
       <div class="mt-3">
